--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src/**",
     "start": "node build/server/server.js",
     "prodstart": "node build/server/server.prod.js",
-    "version": "node -v"
+    "version": "node -v",
+    "coverage": "nyc report --reporter=text-lcov > lcov.info"
   },
   "repository": {
     "type": "git",
@@ -84,7 +85,8 @@
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.21.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "nyc": "^11.6.0"
   },
   "jest": {
     "collectCoverageFrom": [ "src/client/**/*.{js,jsx,mjs}", "src/server/**/*.{js,jsx,mjs}" ],
