--- a/package.json
+++ b/package.json
@@ -91,9 +91,17 @@
     "nyc": "^11.6.0"
   },
   "jest": {
-    "collectCoverageFrom": [ "src/client/**/*.{js,jsx,mjs}", "src/server/**/*.{js,jsx,mjs}" ],
-    "setupFiles": [ "<rootDir>/config/polyfills.js" ],
-    "testMatch": [ "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}", "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}" ],
+    "collectCoverageFrom": [
+      "src/client/**/*.{js,jsx,mjs}",
+      "src/server/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
@@ -101,11 +109,21 @@
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": [ "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$" ],
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
-    "moduleFileExtensions": [ "web.js", "js", "json", "web.jsx", "jsx", "node", "mjs" ]
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ]
   },
   "babel": {
     "presets": [
@@ -121,13 +139,25 @@
     ]
   },
   "eslintConfig": {
-    "extends": [ "standard", "eslint:recommended", "plugin:react/recommended" ],
+    "extends": [
+      "standard",
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
     "parserOptions": {
       "ecmaFeatures": {
         "jsx": true
       }
     },
-    "plugins": [ "standard", "promise", "react", "jsx", "jsx-a11y", "import", "jest" ],
+    "plugins": [
+      "standard",
+      "promise",
+      "react",
+      "jsx",
+      "jsx-a11y",
+      "import",
+      "jest"
+    ],
     "globals": {
       "fetch": false,
       "describe": false,
