--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
@@ -80,7 +80,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-test-renderer": "^16.8.6",
-    "redux-devtools": "^3.4.1",
+    "redux-devtools": "^3.5.0",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
@@ -88,7 +88,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-dev-server": "^3.7.2",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-node-externals": "^1.6.0"
   },
