--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "6.26.0",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.10",
+    "css-loader": "^3.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^4.18.2",
@@ -73,10 +73,10 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "image-webpack-loader": "4.3.1",
-    "jest": "23.1.0",
+    "image-webpack-loader": "^5.0.0",
+    "jest": "^24.8.0",
     "mockdate": "^2.0.3",
-    "nyc": "^11.6.0",
+    "nyc": "^14.1.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-test-renderer": "^16.8.6",
@@ -87,7 +87,7 @@
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-node-externals": "^1.6.0"
