--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "ejs": "^2.5.7",
@@ -48,13 +50,11 @@
   "devDependencies": {
     "@babel/cli": "7.1.5",
     "@babel/core": "7.1.5",
-    "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.8.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-minify-mangle-names": "^0.5.0",
-    "babel-plugin-transform-regenerator": "6.26.0",
     "cross-env": "^5.1.4",
     "css-loader": "^3.0.0",
     "dotenv": "4.0.0",
