--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
     "style-loader": "^0.20.3",
+    "supertest": "^4.0.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^3.3.5",
