--- a/package.json
+++ b/package.json
@@ -58,16 +58,12 @@
     "css-loader": "^3.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^4.18.2",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "^21.18.0",
-    "eslint-plugin-jsx": "0.0.2",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-jsdoc": "^15.9.10",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^5.0.0",
@@ -124,40 +120,5 @@
       "node",
       "mjs"
     ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "standard",
-      "eslint:recommended",
-      "plugin:react/recommended"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "plugins": [
-      "standard",
-      "promise",
-      "react",
-      "jsx",
-      "jsx-a11y",
-      "import",
-      "jest"
-    ],
-    "globals": {
-      "fetch": false,
-      "describe": false,
-      "it": false,
-      "alert": false,
-      "URL": false
-    },
-    "rules": {
-      "react/jsx-uses-react": "error",
-      "react/jsx-uses-vars": "error"
-    },
-    "env": {
-      "jest/globals": true
-    }
   }
 }
