--- a/package.json
+++ b/package.json
@@ -49,7 +49,15 @@
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-hot-middleware": "^2.21.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "image-webpack-loader": "^5.0.0",
+    "babel-loader": "^8.0.6",
+    "style-loader": "^0.20.3",
+    "resolve-url-loader": "^2.3.0",
+    "url-loader": "^1.0.1",
+    "css-loader": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
@@ -57,10 +65,8 @@
     "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "24.8.0",
-    "babel-loader": "^8.0.6",
     "babel-plugin-minify-mangle-names": "^0.5.0",
     "cross-env": "^5.1.4",
-    "css-loader": "^3.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.16.0",
@@ -69,9 +75,6 @@
     "eslint-plugin-jsdoc": "^15.9.10",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
     "mockdate": "^2.0.3",
     "nyc": "^14.1.1",
@@ -79,12 +82,9 @@
     "raf": "3.4.0",
     "react-test-renderer": "^16.8.6",
     "redux-devtools": "^3.5.0",
-    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
-    "style-loader": "^0.20.3",
-    "supertest": "^4.0.2",
-    "url-loader": "^1.0.1"
+    "supertest": "^4.0.2"
   },
   "jest": {
     "collectCoverageFrom": [
